RESOLVED FIXED102191
Web Inspector: highlight is not updating as one edits CSS properties
https://bugs.webkit.org/show_bug.cgi?id=102191
Summary Web Inspector: highlight is not updating as one edits CSS properties
Pavel Feldman
Reported 2012-11-14 01:00:40 PST
We should update highlight upon layout / style recalculation. downstream issue: http://code.google.com/p/chromium/issues/detail?id=160937
Attachments
Patch (6.32 KB, patch)
2012-11-14 01:06 PST, Pavel Feldman
apavlov: review+
Pavel Feldman
Comment 1 2012-11-14 01:06:04 PST
Alexander Pavlov (apavlov)
Comment 2 2012-11-14 01:29:27 PST
Comment on attachment 174100 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=174100&action=review > Source/WebCore/inspector/InspectorPageAgent.h:183 > + bool m_isFirstLayout; m_isFirstLayoutAfterOnLoad?
Pavel Feldman
Comment 3 2012-11-14 01:57:58 PST
Alexander Pavlov (apavlov)
Comment 4 2012-11-28 01:54:58 PST
*** Bug 101598 has been marked as a duplicate of this bug. ***
Alexander Pavlov (apavlov)
Comment 5 2012-11-28 02:40:58 PST
*** Bug 95738 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.